test/asm/invalid-bracketed-macro-arg.err
error: Invalid character '"' in bracketed macro argument
    at invalid-bracketed-macro-arg.asm::m(2) <- invalid-bracketed-macro-arg.asm(6)
Assembly aborted with 1 error
