test/asm/invalid-bracketed-macro-arg.asm
MACRO m
	println "¿", """\<_NARG""", "?"
	println """done!"""
ENDM

	m one, two, three
